# VolumeVR

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  TransferFunction.h  main.cpp
src/shared/: Matrices.h  strtools.h
